--- a/test/frontend/no-resume.html
+++ b/test/frontend/no-resume.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Resumable File Upload (JavaScript Native)</h1>
+    <h1>Resumable File Upload (Pake je es doang a)</h1>
     <input type="file" id="fileInput" />
     <progress id="progressBar" value="0" max="100"></progress>
     <button id="uploadBtn">Upload</button>
